# avian_first_person_shooter_test

./: Cargo.toml  Project notes.md  README.md
.cargo/: config.toml
assets/models/: APC9K SMG.glb  Blocky assault rifle.glb  Gym area.glb  Outdoor table.glb  Radio.glb  Shooting range area.glb  Shooting target.glb  Small shooting target.glb
assets/weapons/: default_rifle.ron  heavy_rifle.ron  smg.ron  test.ron  test1.ron  test2.ron
examples/: muzzle_flash_animation.rs
src/: lib.rs  main.rs  player.rs  utilities.rs  world.rs
src/player/: crosshair.rs  cursor_lock.rs  escape_menu.rs  grabbed_object.rs  grabbed_weapon.rs  inspector_mode.rs  item_anchor.rs  movement_input.rs  player_weapon_collision_hook.rs  spawner.rs
src/player/grabbed_object/: inspector_mode.rs  object_anchor.rs  object_movement.rs
src/player/inspector_mode/: inspector_mode_ui.rs
src/utilities/: angle.rs  app_state.rs  despawn_after_sleep.rs  euler_angle.rs  fraction.rs  pd_controller.rs  quaternion_pd_controller.rs  system_sets.rs
src/utilities/pd_controller/: calculations.rs  config.rs  constrain_value.rs  values.rs
src/utilities/quaternion_pd_controller/: calculations.rs  values.rs
src/world/: character.rs  desired_movement.rs  desired_rotation.rs  grabbable_object.rs  grounded.rs  gym_area.rs  indoor_area.rs  interaction_target.rs  shooting_range_area.rs  shooting_targets.rs  skybox.rs  wall_mirror.rs  weapons.rs
src/world/character/: jump.rs
src/world/shooting_range_area/: shooting_targets.rs
src/world/weapons/: bullet.rs  muzzle_flash.rs  shooting.rs  spawner.rs  weapon_config.rs  weapon_config_loader.rs  weapon_config_modified.rs  weapon_config_save.rs  weapon_config_saver.rs
