[package]
name = "avian_first_person_shooter_test"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = [
    "dynamic_linking",
    "file_watcher",
    "experimental_bevy_feathers",
    "debug",
] }
avian3d = { version = "0.6.1" }
rand = "0.10.0"
ron = "0.12.1"
serde = "1.0.228"
thiserror = "2.0.18"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
